crates/tests/other-db-tests/src/citus/snapshots/other_db_tests__citus__query_tests__predicates__select_where_or.snap
---
source: crates/tests/other-db-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "IV"
      },
      {
        "Title": "Van Halen III"
      }
    ]
  }
]
